<resources>
    <string name="app_name">Lugares</string>
    <string name="msg_datos">Requiere texto en los campos…</string>
    <string name="msg_fallo">Falló la autenticación…</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_lugar">Lugares</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre">Nombre del lugar</string>
    <string name="msg_correo">Correo (xxxxx@xxxxx.xxx)</string>
    <string name="msg_telefono">Teléfono (9999–9999)</string>
    <string name="msg_web">Sitio Web</string>
    <string name="bt_agregar">Agregar Lugar</string>
    <string name="msgLugarAgregado">Lugar agregado</string>
    <string name="msgFaltanDatos">Faltan Datos...</string>
    <string name="msg_imagen">Imagen del lugar</string>
    <string name="bt_modificar">Modificar Lugar</string>
    <string name="msgLugarModificado">Lugar Modificado</string>
    <string name="menu_delete">Eliminar lugar</string>
    <string name="seguroBorra">¿Esta seguro de borrar</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="msg_enviar_correo">Enviar correo al lugar</string>
    <string name="msg_llamar_lugar">Llamada telefónica al lugar</string>
    <string name="msg_whatsapp_lugar">Enviar mensaje por WhatsApp</string>
    <string name="msg_ver_web">Ver sitio web del lugar</string>
    <string name="msg_ver_mapa">Mostrar mapa</string>
    <string name="msg_saludos">Saludos</string>
    <string name="msg_mensaje_correo">Nos comunicamos con estedes para ...</string>
    <string name="bt_latitud1">Latitud</string>
    <string name="bt_longitud1">Longitud</string>
    <string name="bt_altura1">Altura</string>


</resources>