<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.lugar.UpdateLugarFragment" >

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_nombre"
        android:textColorHint="#757575"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:autofillHints="AUTOFILL_HINT_PERSON_NAME" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_correo"
        android:textColorHint="#757575"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_telefono"
        android:textColorHint="#757575"
        android:inputType="phone"
        android:minHeight="48dp"
        android:autofillHints="AUTOFILL_HINT_PHONE_NUMBER" />

    <EditText
        android:id="@+id/etWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_web"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/btUpdateLugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/bt_modificar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/bt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/msg_enviar_correo"
            android:src="@drawable/ic_email" />

        <ImageButton
            android:id="@+id/bt_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/msg_llamar_lugar"
            android:src="@drawable/ic_phone" />

        <ImageButton
            android:id="@+id/bt_whatsapp"
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/msg_whatsapp_lugar"
            android:src="@drawable/whatsapp_logo" />

        <ImageButton
            android:id="@+id/bt_web"
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/msg_ver_web"
            android:src="@drawable/web_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_latitud"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical" />

        <TextView
            android:id="@+id/tv_longitud"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical" />

        <TextView
            android:id="@+id/tv_altura"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical" />

        <ImageButton
            android:id="@+id/bt_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/msg_ver_mapa"
            android:src="@drawable/ic_location" />

    </LinearLayout>
</LinearLayout>