<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.lugar.AddLugarFragment" >

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_nombre"
        android:textColorHint="#757575"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:autofillHints="AUTOFILL_HINT_PERSON_NAME" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_correo"
        android:textColorHint="#757575"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_telefono"
        android:textColorHint="#757575"
        android:inputType="phone"
        android:minHeight="48dp"
        android:autofillHints="AUTOFILL_HINT_PHONE_NUMBER" />

    <EditText
        android:id="@+id/etWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_web"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/btAddLugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_agregar" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="25sp"
        android:padding="10sp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent" >
            <TextView android:id="@+id/tv_latitud1"
                android:layout_weight="1"
                android:layout_gravity="center|center_vertical|center_horizontal"
                android:text="@string/bt_latitud1"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView android:id="@+id/tv_longitud1"
                android:layout_weight="1"
                android:layout_gravity="center|center_vertical|center_horizontal"
                android:text="@string/bt_longitud1"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView android:id="@+id/tv_altura1"
                android:layout_weight="1"
                android:layout_gravity="center|center_vertical|center_horizontal"
                android:text="@string/bt_altura1"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView android:id="@+id/tv_latitud"
                android:layout_weight="1"
                android:layout_gravity="center|center_vertical|center_horizontal"
                android:textSize="18sp"/>
            <TextView android:id="@+id/tv_longitud"
                android:layout_weight="1"
                android:layout_gravity="center|center_vertical|center_horizontal"
                android:textSize="18sp"/>

            <TextView android:id="@+id/tv_altura"
                android:layout_weight="1"
                android:layout_gravity="center|center_vertical|center_horizontal"
                android:textSize="18sp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>